--- a/Huddle landing page/index.html
+++ b/Huddle landing page/index.html
@@ -147,7 +147,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Nomad</a>.
+      Coded by <a href="https://github.com/Trev-Chumba/Huddle-prac">Nomad</a>.
     </p>
   </footer>
 </section>
